removed grids for dev

--- a/views/index.jade
+++ b/views/index.jade
@@ -36,7 +36,7 @@ html(lang='en')
     script(type='text/javascript', src='public/js/require.js', data-main='public/js/config')
 
     //- Gridline for dev environment
-    link(rel='stylesheet', href='public/css/hugrid.css')
+    //- link(rel='stylesheet', href='public/css/hugrid.css')
 
   body
 
@@ -162,8 +162,8 @@ html(lang='en')
       a(href='http://sayan.ee').credit handmade by sayanee
 
     //- Gridline for dev environment
-    script(src='//raw.github.com/simanek/Heads-Up-Grid/master/headsupgrid/hugrid.js')
-    script
+    //- script(src='//raw.github.com/simanek/Heads-Up-Grid/master/headsupgrid/hugrid.js')
+    //- script
       definegrid = function() {
           var browserWidth = $(window).width();
           if (browserWidth >= 1001)
