--- a/views/index.jade
+++ b/views/index.jade
@@ -93,16 +93,16 @@ html(lang='en')
             //-     p PlugFest Android Deep Dive
             //-       span on 19 Jan
             //-     p.tagline Android Development, Google Play, Monetising Apps, Android Development with Samsung
-            li
-              a(href='https://www.facebook.com/events/387625811327260')
-                p Frontend Developers User group Meetup
-                  span on 21 Jan
-                p.tagline TypeScript, Backbone.js, Source Maps, Hacker Web, Startup Academy
-            li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93216432/')
-                p HTML5 Series - Chapter 1
-                  span on 21 Jan
-                p.tagline HTML5 audio & video, WebRTC, Camera API
+            //- li
+            //-   a(href='https://www.facebook.com/events/387625811327260')
+            //-     p Frontend Developers User group Meetup
+            //-       span on 21 Jan
+            //-     p.tagline TypeScript, Backbone.js, Source Maps, Hacker Web, Startup Academy
+            //- li
+            //-   a(href='http://www.meetup.com/HTML5Rocks-SG/events/93216432/')
+            //-     p HTML5 Series - Chapter 1
+            //-       span on 21 Jan
+            //-     p.tagline HTML5 audio & video, WebRTC, Camera API
             li
               a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/99865012/')
                 p HBase Day 1: CRUD and Table Administration
