--- a/views/index.jade
+++ b/views/index.jade
@@ -103,11 +103,11 @@ html(lang='en')
             //-     p HTML5 Series - Chapter 1
             //-       span on 21 Jan
             //-     p.tagline HTML5 audio & video, WebRTC, Camera API
-            li
-              a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/99865012/')
-                p HBase Day 1: CRUD and Table Administration
-                  span on 23 Jan
-                p.tagline Chapter 4.2 from 7 Databases in 7 weeks book
+            //- li
+            //-   a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/99865012/')
+            //-     p HBase Day 1: CRUD and Table Administration
+            //-       span on 23 Jan
+            //-     p.tagline Chapter 4.2 from 7 Databases in 7 weeks book
             li
               a(href='http://ccsg-workshop0113.eventbrite.com/')
                 p Mobile Photography Workshop
@@ -143,6 +143,11 @@ html(lang='en')
                 p HTML5 Series - Chapter 3
                   span on 15 Feb
                 p.tagline Web Sockets, What if the server want to push events
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/101168232/')
+                p February Meetup
+                  span on 26 Feb
+                p.tagline Handling Online Payment in Ruby, RedDotRubyConf 2013
         section
           h3 open source
           ul.open-list.second
