--- a/views/index.jade
+++ b/views/index.jade
@@ -164,6 +164,11 @@ html(lang='en')
                   span on 21 Feb
                 p.tagline Calling for Speakers
             li
+              a(href='https://www.facebook.com/events/159436757541615/')
+                p Frontend Group Feb Meetup
+                  span on 25 Feb
+                p.tagline AngularJS, ComponentsJS, WebRTC
+            li
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/101168232/')
                 p Singapore Ruby Group February Meetup
                   span on 26 Feb
