--- a/views/index.jade
+++ b/views/index.jade
@@ -143,16 +143,21 @@ html(lang='en')
             //-     p talk.js
             //-       span on 4 Feb
             //-     p.tagline Hypermedia APIs, Frontend UI: Spaghetti vs. State Machine
+            //- li
+            //-   a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/103221032/')
+            //-     p 7DB7W. MongoDB. Day 1
+            //-       span on 13 Feb
+            //-     p.tagline Read Chapter 5.2 from "Seven Databases in Seven Weeks"
+            //- li
+            //-   a(href='http://www.meetup.com/HTML5Rocks-SG/events/93219302/')
+            //-     p HTML5 Series - Chapter 3
+            //-       span on 15 Feb
+            //-     p.tagline Web Sockets, What if the server want to push events
             li
-              a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/103221032/')
-                p 7DB7W. MongoDB. Day 1
-                  span on 13 Feb
-                p.tagline Read Chapter 5.2 from "Seven Databases in Seven Weeks"
-            li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93219302/')
-                p HTML5 Series - Chapter 3
-                  span on 15 Feb
-                p.tagline Web Sockets, What if the server want to push events
+              a(href='https://www.facebook.com/events/460547230679544')
+                p DesTractions 2013-02 SG
+                  span on 19 Feb
+                p.tagline Bring your jolly self, good ideas and your favourite design pen
             li
               a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/103221282/')
                 p 7DB7W. MongoDB. Day 2
