added NUS Hackers + SG Hack & Tell

--- a/views/index.jade
+++ b/views/index.jade
@@ -169,6 +169,11 @@ html(lang='en')
                   span on 21 Feb
                 p.tagline Calling for Speakers
             li
+              a(href='http://nushackers.org/')
+                p NUS Hackers
+                  span on 22 Feb
+                p.tagline Design patterns in Drupal, Fast Distributed Web Services Using Sets and Queues
+            li
               a(href='https://www.facebook.com/events/159436757541615/')
                 p Frontend Group Feb Meetup
                   span on 25 Feb
@@ -188,6 +193,11 @@ html(lang='en')
                 p 7DB7W. MongoDB. Day 3
                   span on 27 Feb
                 p.tagline Replica Sets, Sharding, GeoSpatial, and GridFS
+            li
+              a(href='http://sg.hackandtell.org/')
+                p Hack & Tell
+                  span on 5 Mar
+                p.tagline Share and Tell your latest project in just 5 minutes!
         section
           h3 open source
           ul.open-list.second
