added creative crew

--- a/views/index.jade
+++ b/views/index.jade
@@ -159,6 +159,11 @@ html(lang='en')
                   span on 19 Feb
                 p.tagline Bring your jolly self, good ideas and your favourite design pen
             li
+              a(href='http://ccsg0213.eventbrite.com/')
+                p Creative Crew February Meeting 2013
+                  span on 19 Feb
+                p.tagline Creating Instagram Effects, Making Good Looking Videos with iPhone or iPad, Why Fireworks CS6 for Modern Web Design
+            li
               a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/103221282/')
                 p 7DB7W. MongoDB. Day 2
                   span on 20 Feb
