added cc t-shirt printing event

--- a/views/index.jade
+++ b/views/index.jade
@@ -179,6 +179,11 @@ html(lang='en')
                   span on 22 Feb
                 p.tagline Design patterns in Drupal, Fast Distributed Web Services Using Sets and Queues
             li
+              a(href='http://ccsg-workshop0223.eventbrite.com/')
+                p T-Shirt Printing Workshop
+                  span on 23 Feb
+                p.tagline Screen Printing, Embrodiery and Heat Transfer Printing
+            li
               a(href='https://www.facebook.com/events/159436757541615/')
                 p Frontend Group Feb Meetup
                   span on 25 Feb
