--- a/views/index.jade
+++ b/views/index.jade
@@ -153,16 +153,16 @@ html(lang='en')
             //-     p HTML5 Series - Chapter 3
             //-       span on 15 Feb
             //-     p.tagline Web Sockets, What if the server want to push events
-            li
-              a(href='https://www.facebook.com/events/460547230679544')
-                p DesTractions 2013-02 SG
-                  span on 19 Feb
-                p.tagline Bring your jolly self, good ideas and your favourite design pen
-            li
-              a(href='http://ccsg0213.eventbrite.com/')
-                p Creative Crew February Meeting 2013
-                  span on 19 Feb
-                p.tagline Creating Instagram Effects, Making Good Looking Videos with iPhone or iPad, Why Fireworks CS6 for Modern Web Design
+            //- li
+            //-   a(href='https://www.facebook.com/events/460547230679544')
+            //-     p DesTractions 2013-02 SG
+            //-       span on 19 Feb
+            //-     p.tagline Bring your jolly self, good ideas and your favourite design pen
+            //- li
+            //-   a(href='http://ccsg0213.eventbrite.com/')
+            //-     p Creative Crew February Meeting 2013
+            //-       span on 19 Feb
+            //-     p.tagline Creating Instagram Effects, Making Good Looking Videos with iPhone or iPad, Why Fireworks CS6 for Modern Web Design
             li
               a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/103221282/')
                 p 7DB7W. MongoDB. Day 2
