added talk.js 4 mar

--- a/views/index.jade
+++ b/views/index.jade
@@ -89,6 +89,11 @@ html(lang='en')
                   span on 27 Feb
                 p.tagline Replica Sets, Sharding, GeoSpatial, and GridFS
             li
+              a(href='http://www.meetup.com/Singapore-JS/events/105620502/')
+                p talk.js
+                  span on 4 Mar
+                p.tagline CoffeeScript, ES6, RESTful, voxeljs
+            li
               a(href='http://sg.hackandtell.org/')
                 p Hack & Tell
                   span on 5 Mar
