--- a/views/index.jade
+++ b/views/index.jade
@@ -59,41 +59,49 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
+              a(href="#/nus-hackers", class="anchor") Anchor Link                
               a(href='http://nushackers.org/')
                 p NUS Hackers
                   span on 22 Feb
                 p.tagline Design patterns in Drupal, Fast Distributed Web Services Using Sets and Queues
             li
+              a(href="#/ccsg-workshop0223", class="anchor") Anchor Link                
               a(href='http://ccsg-workshop0223.eventbrite.com/')
                 p T-Shirt Printing Workshop
                   span on 23 Feb
                 p.tagline Screen Printing, Embrodiery and Heat Transfer Printing
             li
+              a(href="#/fed-meetup", class="anchor") Anchor Link                
               a(href='https://www.facebook.com/events/159436757541615/')
                 p Frontend Group Feb Meetup
                   span on 25 Feb
                 p.tagline AngularJS, ComponentsJS, WebRTC
             li
+              a(href="#/sg-ruby", class="anchor") Anchor Link                
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/101168232/')
                 p Singapore Ruby Group February Meetup
                   span on 26 Feb
                 p.tagline Handling Online Payment in Ruby, RedDotRubyConf 2013
             li
+              a(href="#/sg-php", class="anchor") Anchor Link                
               a(href='https://www.facebook.com/events/154741208013409/')
                 p Singapore PHP User Group Meetup (Feb 2013)
                   span on 26 Feb
                 p.tagline Calling for speakers
             li
+              a(href="#/7db7w", class="anchor") Anchor Link                
               a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/103221432/')
                 p 7DB7W. MongoDB. Day 3
                   span on 27 Feb
                 p.tagline Replica Sets, Sharding, GeoSpatial, and GridFS
             li
+              a(href="#/talk-js", class="anchor") Anchor Link                
               a(href='http://www.meetup.com/Singapore-JS/events/105620502/')
                 p talk.js
                   span on 4 Mar
                 p.tagline CoffeeScript, ES6, RESTful, voxeljs
             li
+              a(href="#/hack-and-tell", class="anchor") Anchor Link                
               a(href='http://sg.hackandtell.org/')
                 p Hack & Tell
                   span on 5 Mar
