--- a/views/index.jade
+++ b/views/index.jade
@@ -59,21 +59,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://nushackers.org/')
-                p NUS Hackers
-                  span on 22 Feb
-                p.tagline Design patterns in Drupal, Fast Distributed Web Services Using Sets and Queues
-            li
-              a(href='http://ccsg-workshop0223.eventbrite.com/')
-                p T-Shirt Printing Workshop
-                  span on 23 Feb
-                p.tagline Screen Printing, Embrodiery and Heat Transfer Printing
-            li
-              a(href='https://www.facebook.com/events/159436757541615/')
-                p Frontend Group Feb Meetup
-                  span on 25 Feb
-                p.tagline AngularJS, ComponentsJS, WebRTC
-            li
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/101168232/')
                 p Singapore Ruby Group February Meetup
                   span on 26 Feb
@@ -98,6 +83,16 @@ html(lang='en')
                 p Hack & Tell
                   span on 5 Mar
                 p.tagline Share and Tell your latest project in just 5 minutes!
+            li
+              a(href='http://www.barcampsingapore.com/')
+                p Open Science barcamp
+                  span on 8 Mar
+                p.tagline Open Access, Science Commons, Beyond publications, Academic IP ownership, Citizen Science
+            li
+              a(href='https://www.facebook.com/events/491548380882462')
+                p SG Makers Movement Meetup
+                  span on 14 Mar
+                p.tagline Little Makers, Ironman Propmaker, Uyii, Collabcollab, Sculptor
         section
           h3 open source
           ul.open-list.second
