added node march meetup

--- a/views/index.jade
+++ b/views/index.jade
@@ -74,6 +74,11 @@ html(lang='en')
                   span on 27 Feb
                 p.tagline Replica Sets, Sharding, GeoSpatial, and GridFS
             li
+              a(href='https://www.facebook.com/events/131254677052528')
+                p Singapore Node.JS User Group February Meetup
+                  span on 28 Feb
+                p.tagline JavaScript design Patterns, Arduino and NodeJS
+            li
               a(href='http://www.meetup.com/Singapore-JS/events/105620502/')
                 p talk.js
                   span on 4 Mar
