--- a/views/index.jade
+++ b/views/index.jade
@@ -58,26 +58,26 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-            li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/101168232/')
-                p Singapore Ruby Group February Meetup
-                  span on 26 Feb
-                p.tagline Handling Online Payment in Ruby, RedDotRubyConf 2013
-            li
-              a(href='https://www.facebook.com/events/154741208013409/')
-                p Singapore PHP User Group Meetup (Feb 2013)
-                  span on 26 Feb
-                p.tagline Calling for speakers
-            li
-              a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/103221432/')
-                p 7DB7W. MongoDB. Day 3
-                  span on 27 Feb
-                p.tagline Replica Sets, Sharding, GeoSpatial, and GridFS
-            li
-              a(href='https://www.facebook.com/events/131254677052528')
-                p Singapore Node.JS User Group February Meetup
-                  span on 28 Feb
-                p.tagline JavaScript design Patterns, Arduino and NodeJS
+            //- li
+            //-   a(href='http://www.meetup.com/Singapore-Ruby-Group/events/101168232/')
+            //-     p Singapore Ruby Group February Meetup
+            //-       span on 26 Feb
+            //-     p.tagline Handling Online Payment in Ruby, RedDotRubyConf 2013
+            //- li
+            //-   a(href='https://www.facebook.com/events/154741208013409/')
+            //-     p Singapore PHP User Group Meetup (Feb 2013)
+            //-       span on 26 Feb
+            //-     p.tagline Calling for speakers
+            //- li
+            //-   a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/103221432/')
+            //-     p 7DB7W. MongoDB. Day 3
+            //-       span on 27 Feb
+            //-     p.tagline Replica Sets, Sharding, GeoSpatial, and GridFS
+            //- li
+            //-   a(href='https://www.facebook.com/events/131254677052528')
+            //-     p Singapore Node.JS User Group February Meetup
+            //-       span on 28 Feb
+            //-     p.tagline JavaScript design Patterns, Arduino and NodeJS
             li
               a(href='http://www.meetup.com/Singapore-JS/events/105620502/')
                 p talk.js
@@ -90,7 +90,7 @@ html(lang='en')
                 p.tagline Share and Tell your latest project in just 5 minutes!
             li
               a(href='http://www.barcampsingapore.com/')
-                p Open Science barcamp
+                p Open Science Barcamp
                   span on 8 Mar
                 p.tagline Open Access, Science Commons, Beyond publications, Academic IP ownership, Citizen Science
             li
