--- a/views/index.jade
+++ b/views/index.jade
@@ -98,6 +98,11 @@ html(lang='en')
                 p SG Makers Movement Meetup
                   span on 14 Mar
                 p.tagline Little Makers, Ironman Propmaker, Uyii, Collabcollab, Sculptor
+            li
+              a(href='http://www.superhappydevhouse.sg/w/page/35369026/FrontPage')
+                p SuperHappyDevHouse SHDHSG#3
+                  span on 6 April
+                p.tagline Super party for the geeky
         section
           h3 open source
           ul.open-list.second
