added mar/apr events

--- a/views/index.jade
+++ b/views/index.jade
@@ -58,50 +58,45 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-            //- li
-            //-   a(href='http://www.meetup.com/Singapore-Ruby-Group/events/101168232/')
-            //-     p Singapore Ruby Group February Meetup
-            //-       span on 26 Feb
-            //-     p.tagline Handling Online Payment in Ruby, RedDotRubyConf 2013
-            //- li
-            //-   a(href='https://www.facebook.com/events/154741208013409/')
-            //-     p Singapore PHP User Group Meetup (Feb 2013)
-            //-       span on 26 Feb
-            //-     p.tagline Calling for speakers
-            //- li
-            //-   a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/103221432/')
-            //-     p 7DB7W. MongoDB. Day 3
-            //-       span on 27 Feb
-            //-     p.tagline Replica Sets, Sharding, GeoSpatial, and GridFS
-            //- li
-            //-   a(href='https://www.facebook.com/events/131254677052528')
-            //-     p Singapore Node.JS User Group February Meetup
-            //-       span on 28 Feb
-            //-     p.tagline JavaScript design Patterns, Arduino and NodeJS
             li
-              a(href='http://www.meetup.com/Singapore-JS/events/105620502/')
-                p talk.js
-                  span on 4 Mar
-                p.tagline CoffeeScript, ES6, RESTful, voxeljs
-            li
-              a(href='http://sg.hackandtell.org/')
-                p Hack & Tell
-                  span on 5 Mar
-                p.tagline Share and Tell your latest project in just 5 minutes!
-            li
-              a(href='http://www.barcampsingapore.com/')
-                p Open Science Barcamp
-                  span on 8 Mar
-                p.tagline Open Access, Science Commons, Beyond publications, Academic IP ownership, Citizen Science
+              a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/107202192/')
+                p CouchDB Day 1
+                  span on 13 Mar
+                p.tagline CRUD, Futon, and cURL Redux
             li
               a(href='https://www.facebook.com/events/491548380882462')
                 p SG Makers Movement Meetup
                   span on 14 Mar
                 p.tagline Little Makers, Ironman Propmaker, Uyii, Collabcollab, Sculptor
             li
+              a(href='http://www.meetup.com/Singapore-JS/events/108037732/')
+                p Book Club: Effective JavaScript
+                  span on 14 Mar
+                p.tagline New book club om Effective JavaScript by David Herman
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/108064092/')
+                p FREE Technical Workshop - Healthcare Data in the Cloud
+                  span on 14 Mar
+                p.tagline Healthcare in the Cloud, Technical introduction to NHP, Big Data & Visualization
+            li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93220782/')
+                p HTML5 Series - Chapter 4: It's all in the details...
+                  span on 18 Mar
+                p.tagline  Web workers, XMLHttpRequest, History API, Focus Management for the nerds
+            li
+              a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/107202232/')
+                p CouchDB Day 2
+                  span on 20 Mar
+                p.tagline  Creating and Querying Views
+            li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221452/')
+                p HTML5 Series - Chapter 5: ... so tiny details
+                  span on 27 Mar
+                p.tagline  Fullscreen API, Pointer API, Now everyone is a content writer, Just Drag and Drop
+            li
               a(href='http://www.superhappydevhouse.sg/w/page/35369026/FrontPage')
                 p SuperHappyDevHouse SHDHSG#3
-                  span on 6 April
+                  span on 6 Apr
                 p.tagline Super party for the geeky
         section
           h3 open source
