added nus hackers events

--- a/views/index.jade
+++ b/views/index.jade
@@ -79,6 +79,11 @@ html(lang='en')
                   span on 14 Mar
                 p.tagline Healthcare in the Cloud, Technical introduction to NHP, Big Data & Visualization
             li
+              a(href='http://nushackers.org/')
+                p NUS Hackers
+                  span on 15 Mar
+                p.tagline  Open Web Data Aggregation and Integration using CSS selectors
+            li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93220782/')
                 p HTML5 Series - Chapter 4: It's all in the details...
                   span on 18 Mar
@@ -88,6 +93,11 @@ html(lang='en')
                 p CouchDB Day 2
                   span on 20 Mar
                 p.tagline  Creating and Querying Views
+            li
+              a(href='http://nushackers.org/')
+                p NUS Hackers
+                  span on 22 Mar
+                p.tagline  The Unix Philosophy, Automating your command line workflow with Make
             li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93221452/')
                 p HTML5 Series - Chapter 5: ... so tiny details
