--- a/views/index.jade
+++ b/views/index.jade
@@ -59,6 +59,11 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
+              a(href='http://ccsg0313.eventbrite.com/')
+                p Creative Crew March Meeting
+                  span on 12 Mar
+                p.tagline Evernote, Illustrations in Fireworks, Evernote
+            li
               a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/107202192/')
                 p CouchDB Day 1
                   span on 13 Mar
