--- a/views/index.jade
+++ b/views/index.jade
@@ -63,11 +63,11 @@ html(lang='en')
                 p Creative Crew March Meeting
                   span on 12 Mar
                 p.tagline Evernote, Illustrations in Fireworks, Evernote
-            li
-              a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/107202192/')
-                p CouchDB Day 1
-                  span on 13 Mar
-                p.tagline CRUD, Futon, and cURL Redux
+            //- li
+            //-   a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/107202192/')
+            //-     p CouchDB Day 1
+            //-       span on 13 Mar
+            //-     p.tagline CRUD, Futon, and cURL Redux
             li
               a(href='https://www.facebook.com/events/491548380882462')
                 p SG Makers Movement Meetup
