removed old events

--- a/views/index.jade
+++ b/views/index.jade
@@ -59,40 +59,20 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://ccsg0313.eventbrite.com/')
-                p Creative Crew March Meeting
-                  span on 12 Mar
-                p.tagline Evernote, Illustrations in Fireworks, Evernote
-            //- li
-            //-   a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/107202192/')
-            //-     p CouchDB Day 1
-            //-       span on 13 Mar
-            //-     p.tagline CRUD, Futon, and cURL Redux
-            li
-              a(href='https://www.facebook.com/events/491548380882462')
-                p SG Makers Movement Meetup
-                  span on 14 Mar
-                p.tagline Little Makers, Ironman Propmaker, Uyii, Collabcollab, Sculptor
-            li
-              a(href='http://www.meetup.com/Singapore-JS/events/108037732/')
-                p Book Club: Effective JavaScript
-                  span on 14 Mar
-                p.tagline New book club om Effective JavaScript by David Herman
-            li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/108064092/')
-                p FREE Technical Workshop - Healthcare Data in the Cloud
-                  span on 14 Mar
-                p.tagline Healthcare in the Cloud, Technical introduction to NHP, Big Data & Visualization
-            li
               a(href='http://nushackers.org/')
                 p NUS Hackers
                   span on 15 Mar
-                p.tagline  Open Web Data Aggregation and Integration using CSS selectors
+                p.tagline  Getting Started with Open-Source
             li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/93220782/')
                 p HTML5 Series - Chapter 4: It's all in the details...
                   span on 18 Mar
                 p.tagline  Web workers, XMLHttpRequest, History API, Focus Management for the nerds
+            li
+              a(href='https://www.facebook.com/events/428106230608753')
+                p DestrActions 2013-03 SG
+                  span on 19 Mar
+                p.tagline  Another round of design challenges to be tackled. Bring your crazy ideas!
             li
               a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/107202232/')
                 p CouchDB Day 2
