added events and removed undefined repo

--- a/views/index.jade
+++ b/views/index.jade
@@ -89,6 +89,11 @@ html(lang='en')
                   span on 27 Mar
                 p.tagline  Fullscreen API, Pointer API, Now everyone is a content writer, Just Drag and Drop
             li
+              a(href='http://www.meetup.com/R-User-Group-SG/events/105135012/')
+                p AirAsia Expedia and Running R-in Database
+                  span on 27 Mar
+                p.tagline  AirAsia - Expedia, In-Database Analytics
+            li
               a(href='http://www.superhappydevhouse.sg/w/page/35369026/FrontPage')
                 p SuperHappyDevHouse SHDHSG#3
                   span on 6 Apr
